--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "private": true,
     "scripts": {},
     "dependencies": {
+        "@types/jquery": "^3.3.31",
         "@types/lodash": "^4.14.122",
         "requirejs": "2.3.6",
         "tcs": "^10.0.0"
