--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dependencies": {
         "@types/jquery": "^3.3.31",
         "@types/lodash": "^4.14.122",
+        "@types/node": "^12.7.4",
+        "markdown": "^0.5.0",
         "requirejs": "2.3.6",
         "tcs": "^10.0.0"
     }
