Login updated + periods render + dates updated

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^12.7.4",
         "markdown": "^0.5.0",
         "requirejs": "2.3.6",
-        "tcs": "^10.0.0"
+        "tcs": "^10.0.0",
+        "ts-jenum": "^1.1.6"
     }
 }
